--- a/src/app/user-connection/user-connection.component.html
+++ b/src/app/user-connection/user-connection.component.html
@@ -51,23 +51,63 @@
     </li>
   </ul>
   </div>
-<div *ngIf="IsAddUserRequest">
+  <div *ngIf="IsAddUserRequest">
+      <div class="simple-form-aligner">
+          <mat-card class="simple-form-card">
+  
+    <br>
+    <p> Search about user? </p>
+    <mat-card-content>
+      <form [formGroup]="form" >
+        <div class="form-group">
+          <mat-form-field class="simple-form-field-10">
+            <input matInput placeholder="Username" name="username" formControlName="username">
+          </mat-form-field>
+          <br>
+          <button
+          class="simple-form-button"
+          color="primary"
+          mat-raised-button 
+          (click)="SearchUserConnection(form.value)"
+          >
+        Search
+      </button>
+          
+        
+        </div>
+      </form>
+      
+    </mat-card-content>
+  </mat-card>
+    </div>
+    </div>
+
+    
+<div *ngIf="isUserAfterFound">
     <div class="simple-form-aligner">
         <mat-card class="simple-form-card">
 
   <br>
-  <p> Please add a user connections request </p>
+  <p> Add a user connections request </p>
   <mat-card-content>
     <form [formGroup]="form" >
       <div class="form-group">
-        <mat-form-field class="simple-form-field-10">
-          <input matInput placeholder="Username" name="username" formControlName="username">
+        <mat-form-field class="simple-form-field-50">
+          <input matInput placeholder="Given name" name="givenName" formControlName="givenName" readonly> 
+        </mat-form-field>
+        <mat-form-field class="simple-form-field-50">
+          <input matInput placeholder="Family name" name="familyName" formControlName="familyName" readonly> 
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+          <input matInput placeholder="Username" name="username" formControlName="username" readonly>
         </mat-form-field>
         <br>
         <button
+        disabled = {{isRequestSent}}
         class="simple-form-button"
         color="primary"
-        mat-raised-button
+        mat-raised-button 
         (click)="RequestUserConnection(form.value)"
         >
       Request Connection
@@ -76,7 +116,8 @@
       
       </div>
     </form>
+    
   </mat-card-content>
 </mat-card>
   </div>
- 
+</div>
