--- a/src/app/organization/organization.component.scss
+++ b/src/app/organization/organization.component.scss
@@ -1,14 +1,10 @@
 .addAndView{
-  display: flex;
-  justify-content: space-evenly;
-  margin: 120px;
+  display: inline-flex;
+  margin: 20px;
 }
 
 .organization-card {
-  width: 400px;
+  width: 300px;
+  height: 300px;
 }
 
-.organization-card:hover {
-  transform: scale(1.1);
-  box-shadow: 0px 2px 10px black;
-}
