Naming and Cleaning up 6

--- a/src/app/add-connection/add-connections.component.html
+++ b/src/app/add-connection/add-connections.component.html
@@ -70,7 +70,7 @@
           class="simple-form-button"
           color="primary"
           mat-raised-button 
-          (click)="SearchUserConnection(form.value)"
+          (click)="RequestUserConnection(form.value)"
           >
         Find
       </button>
