--- a/src/app/connections/connections.component.html
+++ b/src/app/connections/connections.component.html
@@ -68,7 +68,7 @@
           class="simple-form-button"
           color="primary"
           mat-raised-button 
-          (click)="SearchUserConnection(form.value)"
+          (click)="RequestUserConnection(form.value)"
           >
         Search
       </button>
