--- a/src/app/organization/organization.component.html
+++ b/src/app/organization/organization.component.html
@@ -16,7 +16,7 @@
             <span style="display:flex; margin-bottom: 7px;"><mat-icon style="font-size:22px;" matSuffix>call</mat-icon> {{organizations.phoneNumber}}</span>
             <span style="display:flex;"><mat-icon style="font-size:22px;" matSuffix>contacts</mat-icon> {{organizations.username}}</span> <br>
             <button *ngIf="roles[i]==='admin'" mat-raised-button (click)="sendOrg(organizations)" color="primary">Update</button>
-            <label *ngIf="roles[i]==='admin'" style="float:right;"><span (click)="addUser(organizations._id)"><mat-icon style="cursor:pointer; font-size: 32px;">person_add</mat-icon></span></label>
+            <label *ngIf="roles[i]==='admin'" style="float:right;"><span (click)="addUser(organizations)"><mat-icon style="cursor:pointer; font-size: 32px;">person_add</mat-icon></span></label>
           </mat-card-content>
         </mat-card>
     </div>
