--- a/src/app/update-organization/update-organization.component.html
+++ b/src/app/update-organization/update-organization.component.html
@@ -62,6 +62,34 @@
           </div>
         </mat-card-content>
       </form>
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Advanced
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <button mat-raised-button color="primary" (click)="openDialog(modal)" class="simple-form-button">Delete Organization</button>
+        </mat-expansion-panel>
+      </mat-accordion>
+      <ng-template #modal>
+        <mat-dialog-content>
+          <div>
+            Are you sure you want to delete this organization? 
+          </div>
+        </mat-dialog-content>
+          <mat-dialog-actions align='end'>
+            <button (click)="cancel()"
+                    mat-raised-button
+                    color='warn'>Cancel
+            </button>
+            <button (click)="delete()"
+                    mat-raised-button
+                    cdkFocusInitial
+                    color='primary'>Yes
+            </button>
+          </mat-dialog-actions>
+      </ng-template>
     </mat-card>
   </div>
   
