--- a/src/app/connections/connections.component.html
+++ b/src/app/connections/connections.component.html
@@ -2,15 +2,15 @@
   <mat-card>
     <div class="col-md-8 offset-md-2">
       <nav mat-tab-nav-bar>
-        <button class="simple-form-button" color="primary" mat-raised-button [routerLink]=navLinks[0]> 
-          Connections {{pendingConnectionsCounter}}
-        </button>
-        <button class="simple-form-button" color="primary" mat-raised-button [routerLink]=navLinks[1]> 
-          Pending {{pendingConnectionsCounter}}
-        </button>
-        <button class="simple-form-button" color="primary" mat-raised-button [routerLink]=navLinks[2]> 
-          Add
-        </button>
+        <a mat-tab-link [routerLink]="navLinks[0]" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+            View connections {{ConfirmedConnectionsCounter}}
+        </a>
+        <a mat-tab-link [routerLink]="navLinks[1]" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+           Requests {{pendingConnectionsCounter}}
+        </a>
+        <a mat-tab-link [routerLink]="navLinks[2]" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+            Add 
+        </a>
       </nav>
       <router-outlet></router-outlet>
     </div>
