Show users and users count implemented

--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -9,6 +9,11 @@
               <mat-error>Required</mat-error>
             </mat-form-field>
             <button mat-raised-button color="primary">Add user</button>
+            <span 
+                *ngIf='errorMessage'
+                class="text-error-color">
+              {{errorMessage}}
+            </span>
           </div>
         </mat-card-content>
       </form>
