--- a/src/app/update-organization/update-organization.component.html
+++ b/src/app/update-organization/update-organization.component.html
@@ -59,6 +59,8 @@
             <span *ngIf="submitSuccess"  class="successMessage">
                 {{successMessage}}
             </span>
+            <span style="display:flex; margin-top: 10px;">
+              <mat-icon style="font-size:20px;">person</mat-icon>{{users}}</span>
           </div>
         </mat-card-content>
       </form>
