--- a/src/app/organization/organization.component.html
+++ b/src/app/organization/organization.component.html
@@ -3,20 +3,53 @@
             mat-raised-button
             color="primary"
             style="height: 50px; margin: 10px;">
-            <span style="display:inline-flex;"><mat-icon>add</mat-icon></span>
+            <span style="display:inline-flex;">
+              <mat-icon>add</mat-icon>
+            </span>
             New Organization
     </button><br>
-    <div *ngFor="let organizations of organization; let i =index" class="addAndView">
+    <div *ngFor="let organizations of organization; let i = index" class="addAndView">
       <mat-card class="organization-card">
           <mat-card-title>{{organizations.name}}</mat-card-title><hr>
-          <img *ngIf="organizations.logo" width="250px" [src]="organizations.logo" alt='Company Logo'>
-          <img *ngIf="!organizations.logo" width="250px" height="185px" src="assets/img/no-logo-available.gif" alt='Profile Photo'>
-          <mat-card-content>
-            <br><span style="display:flex; margin-bottom: 7px;"><mat-icon style="font-size:22px;" matSuffix>language</mat-icon>{{organizations.website}}</span>
-            <span style="display:flex; margin-bottom: 7px;"><mat-icon style="font-size:22px;" matSuffix>call</mat-icon> {{organizations.phoneNumber}}</span>
-            <span style="display:flex;"><mat-icon style="font-size:22px;" matSuffix>contacts</mat-icon> {{organizations.username}}</span> <br>
-            <button *ngIf="roles[i]==='admin'" mat-raised-button (click)="sendOrg(organizations)" color="primary">Update</button>
-            <label *ngIf="roles[i]==='admin'" style="float:right;"><span (click)="addUser(organizations)"><mat-icon style="cursor:pointer; font-size: 32px;">person_add</mat-icon></span></label>
+          <img *ngIf="organizations.logo"
+               width="250px"
+              [src]="organizations.logo"
+              alt='Company Logo'>
+          <img *ngIf="!organizations.logo"
+               width="250px"
+               height="185px"
+               src="assets/img/no-logo-available.gif"
+               alt='Profile Photo'>
+          <mat-card-content>  <br>
+            <span style="display:flex; margin-bottom: 7px;">
+              <mat-icon style="font-size:22px;" matSuffix>language</mat-icon>
+                {{organizations.website}}
+            </span>
+            <span style="display:flex; margin-bottom: 7px;">
+              <mat-icon style="font-size:22px;" matSuffix>call</mat-icon> 
+                {{organizations.phoneNumber}}
+            </span>
+            <span style="display:flex; margin-bottom: 7px;">
+              <mat-icon style="font-size:22px;" matSuffix>contacts</mat-icon> 
+                {{organizations.username}}
+              </span>
+            <span style="display:flex;">
+              <mat-icon style="font-size:22px;" matSuffix>person</mat-icon> 
+                {{organizations.userCount}}
+            </span> <br>
+            <button *ngIf="roles[i]==='admin'"
+                    mat-raised-button 
+                    (click)="sendOrg(organizations)" 
+                    color="primary">
+                    Update
+            </button>
+            <label *ngIf="roles[i]==='admin'" style="float:right;">
+              <span (click)="addUser(organizations)">
+                <mat-icon style="cursor:pointer; font-size: 32px;">
+                  person_add
+                </mat-icon>
+              </span>
+            </label>
           </mat-card-content>
         </mat-card>
     </div>
