Naming and cleaning up

--- a/src/app/add-connection/add-connections.component.html
+++ b/src/app/add-connection/add-connections.component.html
@@ -13,7 +13,7 @@
             </span>
             <br>
             <br>
-            <button class="simple-form-button" color="primary" mat-raised-button (click)="RequestUserConnection(form.value)">
+            <button class="simple-form-button" color="primary" mat-raised-button (click)="requestUserConnection(form.value)">
               Add
             </button>
           </div>
