--- a/src/app/addcontact/add-contact.component.html
+++ b/src/app/addcontact/add-contact.component.html
@@ -1,11 +1,8 @@
 <div class="simple-form-aligner">
   <mat-card class="simple-form-card">
-    
-    <div *ngIf='!submitSuccess'> 
-      <mat-card-title>Please Add a contact </mat-card-title>
-      <mat-card-subtitle>
-          Be the first to hear new announcements about XCredits
-      </mat-card-subtitle>
+
+    <div *ngIf='!submitSuccess'>
+      <mat-card-title>Please add contact </mat-card-title>
       <mat-card-content>
         <form [formGroup]="form" (ngSubmit)="submit(form.value)">
           <div class="form-group">
@@ -20,25 +17,14 @@
               <input matInput placeholder="Email" name="email" formControlName="email">
             </mat-form-field>
             <br>
-            <button
-                [disabled]="waiting"
-                class="simple-form-button" 
-                color="primary" 
-                mat-raised-button 
-                type="submit" 
-                value="submit">
-              Add Contact
+            <button [disabled]="waiting" class="simple-form-button" color="primary" mat-raised-button type="submit"
+              value="submit">
+              Add contact
             </button>
-            <mat-progress-spinner
-                *ngIf="waiting"
-                color="primary"
-                mode="indeterminate"
-                class="simple-form-spinner"
-                [diameter]=22>
+            <mat-progress-spinner *ngIf="waiting" color="primary" mode="indeterminate" class="simple-form-spinner"
+              [diameter]=22>
             </mat-progress-spinner>
-            <span 
-                *ngIf='formErrorMessage' 
-                class="text-error-color">
+            <span *ngIf='formErrorMessage' class="text-error-color">
               {{formErrorMessage}}
             </span>
           </div>
@@ -46,17 +32,13 @@
       </mat-card-content>
     </div>
     <div *ngIf='submitSuccess'>
-        <mat-card-title>Success</mat-card-title>
-        <mat-card-subtitle>
-            You have successfully added a new contact.
-        </mat-card-subtitle>
-        <button routerLink='/'
-            class="simple-form-button" 
-            color="primary" 
-            mat-raised-button >
-          Go to the home page
-        </button>
-    </div> 
+      <mat-card-title>Success</mat-card-title>
+      <mat-card-subtitle>
+        You have successfully added a new contact.
+      </mat-card-subtitle>
+      <button routerLink='/' class="simple-form-button" color="primary" mat-raised-button>
+        Go to the home page
+      </button>
+    </div>
   </mat-card>
 </div>
-
