--- a/src/app/update-organization/update-organization.component.html
+++ b/src/app/update-organization/update-organization.component.html
@@ -67,11 +67,11 @@
             </span>
           </div>
           <ng-template #deleteUser>
-            <div style="width:350px;">
-              <mat-dialog-content>
-                Are you sure yo want delete
+            <div style="width:300px;">
+              <mat-dialog-content style="text-align:center;">
+                Are you sure you want delete
               </mat-dialog-content>
-              <mat-dialog-actions align='end'>
+              <mat-dialog-actions align='center'>
                   <button (click)="cancel()"
                           mat-raised-button
                           color='warn'>Cancel
