--- a/src/app/organization/organization.component.html
+++ b/src/app/organization/organization.component.html
@@ -12,11 +12,11 @@
       <mat-card class="organization-card">
           <mat-card-title>{{organizations.name}}</mat-card-title><hr>
           <img *ngIf="organizations.logo"
-               width="250px"
+               width="100%"
               [src]="organizations.logo"
               alt='Company Logo'>
           <img *ngIf="!organizations.logo"
-               width="250px"
+               width="100%"
                height="185px"
                src="assets/img/no-logo-available.gif"
                alt='Profile Photo'>
@@ -37,13 +37,13 @@
               <mat-icon style="font-size:22px;" matSuffix>person</mat-icon> 
                 {{organizations.userCount}}
             </span> <br>
-            <button *ngIf="roles[i]==='admin'"
+            <button *ngIf="userRoles[organizations._id][0]==='admin'"
                     mat-raised-button 
                     (click)="sendOrg(organizations)" 
                     color="primary">
                     Update
             </button>
-            <label *ngIf="roles[i]==='admin'" style="float:right;">
+            <label *ngIf="userRoles[organizations._id][0]==='admin'" style="float:right;">
               <span (click)="addUser(organizations)">
                 <mat-icon style="cursor:pointer; font-size: 32px;">
                   person_add
