--- a/src/app/view-contacts/view-contacts.component.html
+++ b/src/app/view-contacts/view-contacts.component.html
@@ -1,31 +1,43 @@
-<div class="simple-form-aligner">
-  <mat-card class="simple-form-card">
-    <form [formGroup]="form" (ngSubmit)="submit(form.value)">
-      <mat-card-title style="text-align:center;"> Contact Info </mat-card-title>
-      <mat-card-content>
-        <div class="form-group">
-          <mat-form-field class="simple-form-field-50">
-            <input matInput placeholder="Given name" name="givenName" formControlName="givenName">
-          </mat-form-field>
-          <mat-form-field class="simple-form-field-50">
-            <input matInput placeholder="Family name" name="familyName" formControlName="familyName">
-          </mat-form-field>
-          <br>
-          <mat-form-field>
-            <input matInput placeholder="Email" name="email" formControlName="email">
-          </mat-form-field>
-          <br>
-          <br>
-          <button [disabled]="waiting" (click)="previousContact()" class="simple-form-button" style="margin-right:50px"
-            color="primary" mat-raised-button type="submit">
-            Previous contact
-          </button>
-          <button [disabled]="waiting" (click)="nextContact()" class="simple-form-button" style="margin-left:50px"
-            color="primary" mat-raised-button type="submit">
-            Next contact
-          </button>
-        </div>
-      </mat-card-content>
-    </form>
-  </mat-card>
-</div>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!-- Checkbox Column -->
+  <ng-container matColumnDef="select">
+    <th mat-header-cell *matHeaderCellDef>
+      <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
+        [indeterminate]="selection.hasValue() && !isAllSelected()">
+      </mat-checkbox>
+    </th>
+    <td mat-cell *matCellDef="let row">
+      <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)">
+      </mat-checkbox>
+    </td>
+  </ng-container>
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="No">
+    <th mat-header-cell *matHeaderCellDef> No. </th>
+    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="Given Name">
+    <th mat-header-cell *matHeaderCellDef> Given name </th>
+    <td mat-cell *matCellDef="let element"> {{element.givenName}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="Family Name">
+    <th mat-header-cell *matHeaderCellDef> Family name </th>
+    <td mat-cell *matCellDef="let element"> {{element.familyName}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="Email">
+    <th mat-header-cell *matHeaderCellDef> Email </th>
+    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
+  </tr>
+</table>
