--- a/src/app/organization/organization.component.html
+++ b/src/app/organization/organization.component.html
@@ -8,7 +8,7 @@
             </span>
             New Organization
     </button><br>
-    <div *ngFor="let organizations of organization; let i = index" class="addAndView">
+    <div *ngFor="let organizations of organization;" class="addAndView">
       <mat-card class="organization-card">
           <mat-card-title>{{organizations.name}}</mat-card-title><hr>
           <img *ngIf="organizations.logo"
@@ -17,19 +17,19 @@
               alt='Company Logo'>
           <img *ngIf="!organizations.logo"
                width="100%"
-               height="185px"
+               height="222px"
                src="assets/img/no-logo-available.gif"
-               alt='Profile Photo'>
+               alt='Company Logo'>
           <mat-card-content>  <br>
-            <span style="display:flex; margin-bottom: 7px;">
+            <span class="icon">
               <mat-icon style="font-size:22px;" matSuffix>language</mat-icon>
                 {{organizations.website}}
             </span>
-            <span style="display:flex; margin-bottom: 7px;">
+            <span class="icon">
               <mat-icon style="font-size:22px;" matSuffix>call</mat-icon> 
                 {{organizations.phoneNumber}}
             </span>
-            <span style="display:flex; margin-bottom: 7px;">
+            <span class="icon">
               <mat-icon style="font-size:22px;" matSuffix>contacts</mat-icon> 
                 {{organizations.username}}
               </span>
@@ -37,13 +37,13 @@
               <mat-icon style="font-size:22px;" matSuffix>person</mat-icon> 
                 {{organizations.userCount}}
             </span> <br>
-            <button *ngIf="userRoles[organizations._id][0]==='admin'"
+            <button *ngIf="userRoles[organizations._id].indexOf('admin') !== -1"
                     mat-raised-button 
-                    (click)="sendOrg(organizations)" 
+                    (click)="updateOrg(organizations)" 
                     color="primary">
                     Update
             </button>
-            <label *ngIf="userRoles[organizations._id][0]==='admin'" style="float:right;">
+            <label *ngIf="userRoles[organizations._id].indexOf('admin') !== -1" style="float:right;">
               <span (click)="addUser(organizations)">
                 <mat-icon style="cursor:pointer; font-size: 32px;">
                   person_add
