--- a/src/app/update-organization/update-organization.component.scss
+++ b/src/app/update-organization/update-organization.component.scss
@@ -18,3 +18,27 @@
     padding-right: 64px;
   }
 }
+
+.displayUsers {
+  display:flex;
+  margin-bottom: -24px;
+}
+
+.userImage {
+  width:40px;
+  height:40px;
+  border-radius:50%;
+  margin-top: 10px;
+}
+
+.username {
+  margin-top: 19px;
+  margin-left: 7px;
+}
+
+.removeIcon {
+  font-size:16px;
+  color: red;
+  margin: 21px 4px;
+  cursor: pointer;
+}
