--- a/src/app/update-organization/update-organization.component.html
+++ b/src/app/update-organization/update-organization.component.html
@@ -34,7 +34,7 @@
             <br>
             <mat-form-field class="simple-form-field-100">
                 <input matInput placeholder="Username" name="username" formControlName="username">
-                <mat-error>Required</mat-error>
+                <mat-error>{{usernameErrorMessage}}</mat-error>
             </mat-form-field>
             <br>
             <button
