--- a/src/app/create-organization/create-organization.component.html
+++ b/src/app/create-organization/create-organization.component.html
@@ -16,7 +16,7 @@
           </mat-form-field>
           <mat-form-field class="simple-form-field-100">
             <input matInput placeholder="Organization Username" name="username" formControlName="username">
-            <mat-error>Required</mat-error>
+            <mat-error>{{usernameErrorMessage}}</mat-error>
           </mat-form-field>
           <section>
             <button
