image cropper ratio set different to different components.

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -11,6 +11,7 @@
                 (imageUploaded)="handleImageUpload($event)"
                 (imageError)="handleImageError()"
                 [imageUploadRoute]= "imageUploadRoute"
+                [ratio]="selectedRatio"
                 [id]="user.id">
             </app-image-upload>  
           </div>
