--- a/src/app/image-upload/image-upload.component.html
+++ b/src/app/image-upload/image-upload.component.html
@@ -14,7 +14,7 @@
       <image-cropper class="dialogStyle" 
           [imageChangedEvent]="imageChangedEvent"
           [maintainAspectRatio]="true"
-          [aspectRatio]="4 / 3"
+          [aspectRatio]="ratio"
           format="jpeg"
           (imageCroppedFile)="imageCropped($event)">
       </image-cropper>
